src/scss/pages/_flowpage.scss
.flowpage {
    height: 100%;
    display: flex;
    flex: 1;
    flex-flow: column;
    .flowchart {
        flex-grow: 1;
        display: flex;
        flex: 1;
        flex-flow: row;
        flex-direction: row;
        p {
            margin: 20px;
            color: $mid-dark
        }
        .handle {
            text-align: center;
            padding: 10px;
            font-weight: bold;
            cursor: grab;
            cursor: -webkit-grab;
            z-index: 1
        }
        .react-draggable-dragging {
            position: absolute;
            z-index: 100;
        }
        .box {
            position: absolute;
            border: 2px solid $gray;
            width: 200px;
            height: 100px;
            border-radius: 4px;
            background-color: $white;
            .boxContent {
                width: 200px;
                position: absolute;
                z-index: 10;
            }
        }
        
        .selected {
            border: 2px solid blue;
            position: absolute;
        }
        
        #panel {
            background-color: $light;
            width: 0px;
            border-left: 2px solid $gray;
            transition: width .4s;
            -webkit-transition: width .4s;
            z-index: 1000;
        }
        
        .chart {
            flex-grow: 3;
            overflow: hidden;
        }
    }
}

